--- a/sass/base/_glob.scss
+++ b/sass/base/_glob.scss
@@ -83,12 +83,18 @@ a {
 }
 /* основние стили елементов */
 .container {
-  display: flex;
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  width: 480px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 /* Оглавления страниц */
