--- a/css/main.css
+++ b/css/main.css
@@ -453,21 +453,71 @@ a {
 
 /* Функции, Характерные черты (Feature) */
 .feature {
-  padding-top: 94px;
+  padding-top: 60px;
 }
 
-.feature .list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .feature {
+    padding-top: 94px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .feature .list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature .list {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
 }
 
 .feature .item {
-  width: calc(100%);
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .feature .item {
+    -ms-flex-preferred-size: calc(50% - 15px);
+        flex-basis: calc(50% - 15px);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .feature .item:nth-child(2n) {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature .item {
+    -ms-flex-preferred-size: calc((100% - 90px) / 4);
+        flex-basis: calc((100% - 90px) / 4);
+  }
 }
 
 .feature .item + .item {
-  margin-left: 30px;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .feature .item + .item:nth-child(-n + 2) {
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .feature .item + .item {
+    margin-top: 0;
+    margin-left: 30px;
+  }
 }
 
 .feature .icon {
@@ -484,7 +534,14 @@ a {
 }
 
 .feature .title {
+  text-align: center;
   margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .feature .title {
+    text-align: left;
+  }
 }
 
 .feature .text {
