--- a/sass/components/Studio-page/_feature.scss
+++ b/sass/components/Studio-page/_feature.scss
@@ -1,16 +1,47 @@
 /* Функции, Характерные черты (Feature) */
 
 .feature {
-  padding-top: 94px;
+  padding-top: 60px;
+
+  @media screen and (min-width: $width-desktop) {
+    padding-top: 94px;
+  }
 
   & .list {
-    display: flex;
+    @media screen and (min-width: $width-tablet) {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    @media screen and (min-width: $width-desktop) {
+      flex-wrap: nowrap;
+    }
   }
   & .item {
-    width: calc(100%);
+    width: 100%;
+    @media screen and (min-width: $width-tablet) {
+      flex-basis: calc(50% - 15px);
+    }
+    &:nth-child(2n) {
+      @media screen and (min-width: $width-tablet) and (max-width: 1199px) {
+        margin-left: 30px;
+      }
+    }
+    @media screen and (min-width: $width-desktop) {
+      flex-basis: calc((100% - 90px) / 4);
+    }
   }
   & .item + .item {
-    margin-left: 30px;
+    margin-top: 30px;
+    &:nth-child(-n + 2) {
+      @media screen and (min-width: $width-tablet) {
+        margin-top: 0;
+      }
+    }
+
+    @media screen and (min-width: $width-desktop) {
+      margin-top: 0;
+      margin-left: 30px;
+    }
   }
   & .icon {
     height: 70px;
@@ -25,7 +56,11 @@
     border-radius: 4px;
   }
   & .title {
+    text-align: center;
     margin-top: 30px;
+    @media screen and (min-width: $width-tablet) {
+      text-align: left;
+    }
   }
   & .text {
     margin-top: 10px;
