--- a/sass/components/Studio-page/_activity.scss
+++ b/sass/components/Studio-page/_activity.scss
@@ -5,6 +5,9 @@
   padding-top: 94px;
   padding-bottom: 94px;
 
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
   & .title-section {
     align-self: center;
     margin-bottom: 50px;
