адаптировал секцию команды

--- a/css/main.css
+++ b/css/main.css
@@ -611,6 +611,26 @@ a {
 }
 
 .our-team {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.our-team .title-section {
+  text-align: center;
+}
+
+.our-team .list-team {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -618,28 +638,49 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  margin-top: 30px;
 }
 
-.our-team .title-section {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+@media screen and (min-width: 768px) {
+  .our-team .list-team {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 
-.our-team .list-team {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .our-team .list-team {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team .list-team {
+    margin-top: 50px;
+  }
 }
 
 .our-team .item + .item {
-  margin-left: 30px;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-team .item + .item:nth-child(-n + 2) {
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team .item + .item {
+    margin-top: 0;
+    margin-left: 30px;
+  }
 }
 
 .our-team .item {
@@ -658,6 +699,13 @@ a {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .our-team .item {
+    -ms-flex-preferred-size: calc((100% - 30px) / 2);
+        flex-basis: calc((100% - 30px) / 2);
+  }
 }
 
 .our-team .title.name {
