--- a/sass/components/Studio-page/_team.scss
+++ b/sass/components/Studio-page/_team.scss
@@ -5,21 +5,45 @@
   background-color: $background-secondary;
 }
 .our-team {
-  display: flex;
+  padding-top: 60px;
+  padding-bottom: 60px;
   flex-direction: column;
-  padding-top: 94px;
-  padding-bottom: 94px;
+
+  @media screen and (min-width: $width-desktop) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   & .title-section {
-    align-self: center;
+    text-align: center;
   }
   & .list-team {
     display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
+    flex-direction: column;
+    margin-top: 30px;
+    @media screen and (min-width: $width-tablet) {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    @media screen and (min-width: $width-tablet) and (max-width: 1199px) {
+      flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: $width-desktop) {
+      margin-top: 50px;
+    }
   }
   & .item + .item {
-    margin-left: 30px;
+    margin-top: 30px;
+    &:nth-child(-n + 2) {
+      @media screen and (min-width: $width-tablet) {
+        margin-top: 0;
+      }
+    }
+    @media screen and (min-width: $width-desktop) {
+      margin-top: 0;
+      margin-left: 30px;
+    }
   }
   & .item {
     display: flex;
@@ -29,6 +53,10 @@
     background-color: $background-primary;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
+
+    @media screen and (min-width: $width-tablet) and (max-width: 1199px) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
   }
   & .title.name {
     margin-top: 30px;
