--- a/css/main.css
+++ b/css/main.css
@@ -100,14 +100,23 @@ a {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 480px;
+}
+
+@media screen and (max-width: 767px) {
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     width: 768px;
   }
 }
@@ -227,8 +236,10 @@ a {
   display: flex;
 }
 
-.address-list .item + .item {
-  margin-left: 30px;
+@media screen and (min-width: 1200px) {
+  .address-list .item + .item {
+    margin-left: 30px;
+  }
 }
 
 .address-list .link {
@@ -246,18 +257,32 @@ a {
           flex-direction: column;
 }
 
+@media screen and (max-width: 1199px) {
+  .footer .address-blok {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .footer .address-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-top: 8px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .address-list {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
 .footer .address-list .link {
@@ -1251,27 +1276,76 @@ footer {
 }
 
 .footer {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.footer .item-colomn {
-  width: calc((100% - 60px) / 4);
+@media screen and (max-width: 767px) {
+  .footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .item-colomn {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: calc((100% - 60px) / 4);
+  }
 }
 
 .footer .block-subscribe {
-  width: calc((100% - 30px) / 2);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .block-subscribe {
+    width: calc((100% - 30px) / 2);
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.footer .section {
+  padding-top: 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer .section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .icon.send {
@@ -1281,13 +1355,20 @@ footer {
 }
 
 .subscribe-title {
-  display: inline-block;
+  display: block;
   margin-bottom: 20px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-title {
+    text-align: left;
+  }
 }
 
 .label-subscribe {
   display: block;
-  margin-right: 12px;
+  width: 100%;
 }
 
 .label-subscribe:hover .field-subscribe,
@@ -1295,9 +1376,15 @@ footer {
   border-color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .label-subscribe {
+    margin-right: 12px;
+  }
+}
+
 .field-subscribe {
+  margin-bottom: 20px;
   padding: 15px 16px;
-  margin-right: 12px;
   width: 100%;
   height: 50px;
   color: #757575;
@@ -1311,9 +1398,29 @@ footer {
   outline: none;
 }
 
+@media screen and (max-width: 1199px) {
+  .field-subscribe {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .field-subscribe {
+    margin-bottom: 0;
+  }
+}
+
 .block-subscribe .button {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   height: 50px;
+}
+
+@media screen and (min-width: 1200px) {
+  .block-subscribe .button {
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
 }
 /*# sourceMappingURL=main.css.map */
