--- a/sass/base/_glob.scss
+++ b/sass/base/_glob.scss
@@ -87,9 +87,12 @@ a {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  width: 480px;
+  display: flex;
+  width: $width-mobile;
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
   @media screen and (min-width: $width-tablet) {
-    display: flex;
     width: $width-tablet;
   }
   @media screen and (min-width: $width-desktop) {
