--- a/sass/components/footer/_footer-page.scss
+++ b/sass/components/footer/_footer-page.scss
@@ -4,18 +4,40 @@ footer {
   background-color: $background-dark;
 }
 .footer {
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: baseline;
-  padding-top: 60px;
   padding-bottom: 60px;
+  // align-items: center;
 
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
+
+  @media screen and (min-width: $width-tablet) {
+    flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: space-around;
+  }
   .item-colomn {
-    width: calc((100% - 60px) / 4);
+    @media screen and (min-width: $width-desktop) {
+      justify-content: space-between;
+      width: calc((100% - 60px) / 4);
+    }
   }
   .block-subscribe {
-    width: calc((100% - 30px) / 2);
     display: flex;
+    flex-direction: column;
+
+    @media screen and (min-width: $width-desktop) {
+      width: calc((100% - 30px) / 2);
+      flex-direction: row;
+    }
+  }
+  & .section {
+    padding-top: 60px;
+    @media screen and (max-width: 1199px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
 
@@ -25,21 +47,29 @@ footer {
   margin-left: 10px;
 }
 .subscribe-title {
-  display: inline-block;
+  display: block;
   margin-bottom: 20px;
+  text-align: center;
+
+  @media screen and (min-width: $width-desktop) {
+    text-align: left;
+  }
 }
 .label-subscribe {
   display: block;
-  margin-right: 12px;
+  width: 100%;
 
   &:hover .field-subscribe,
   &:focus-within .field-subscribe {
     border-color: $accent;
   }
+  @media screen and (min-width: $width-desktop) {
+    margin-right: 12px;
+  }
 }
 .field-subscribe {
+  margin-bottom: 20px;
   padding: 15px 16px;
-  margin-right: 12px;
   width: 100%;
   height: 50px;
 
@@ -50,8 +80,19 @@ footer {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   outline: none;
+  @media screen and (max-width: 1199px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: $width-desktop) {
+    margin-bottom: 0;
+  }
 }
 .block-subscribe .button {
-  align-self: flex-end;
+  align-self: center;
   height: 50px;
+
+  @media screen and (min-width: $width-desktop) {
+    align-self: flex-end;
+  }
 }
