--- a/sass/components/common/_logo.scss
+++ b/sass/components/common/_logo.scss
@@ -1,13 +1,14 @@
 /* Логотип сайта в хедере */
 
 .site-logo {
+  display: flex;
   font-family: 'Raleway', sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
   color: $accent;
 
-  .site-nav & {
+  .site-header & {
     margin-top: 24px;
     margin-bottom: 25px;
   }
