--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/common/address-block';
 @import './components/common/_icon-social';
 @import './components/common/button';
+@import './components/common/modal-nav';
 
 // Хедер
 @import './components/header/header-page';
