--- a/css/main.css
+++ b/css/main.css
@@ -189,13 +189,15 @@ a {
 }
 
 /* Адресс */
-.address-blok-header {
-  margin-left: auto;
-}
-
 @media screen and (max-width: 767px) {
   .address-blok-header {
-    position: absolute;
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .address-blok-header {
+    margin-left: auto;
   }
 }
 
@@ -203,6 +205,9 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .address-blok-header .item:hover .icon,
@@ -253,6 +258,14 @@ a {
           flex-direction: column;
 }
 
+@media screen and (max-width: 767px) {
+  .site-header .address-list {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .site-header .address-list {
     -webkit-box-orient: horizontal;
@@ -262,15 +275,33 @@ a {
   }
 }
 
+.site-header .address-list .item + .item {
+  margin-top: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .site-header .address-list .item + .item {
+    margin-top: 10px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
-  .address-list .item + .item {
+  .site-header .address-list .item + .item {
+    margin-top: 0;
     margin-left: 30px;
   }
 }
 
 .address-list .link {
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.67;
   letter-spacing: 0.02em;
+}
+
+@media screen and (max-width: 767px) {
+  .address-list .link {
+    font-size: 18px;
+  }
 }
 
 .footer .address-blok {
@@ -401,28 +432,9 @@ a {
   background-color: #188ce8;
 }
 
-.modal-nav {
-  border: none;
-  background-color: transparent;
-}
-
-@media screen and (min-width: 768px) {
-  .modal-nav {
-    display: none;
-  }
-}
-
-.modal-nav .icon-cross {
-  display: none;
-}
-
-.modal-nav.is-open .icon-cross {
-  display: block;
-}
-
 /* Блок шапки */
 .site-header {
-  position: relative;
+  position: fixed;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -433,6 +445,9 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  background: #ffffff;
+  width: 100%;
+  z-index: 1;
 }
 
 .site-header .item:hover,
@@ -448,30 +463,45 @@ a {
   /* Фишка "Мы тут" */
 }
 
-@media screen and (max-width: 767px) {
-  .site-nav {
-    position: absolute;
-  }
-}
-
 .site-nav > .list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 85px;
-  /* margin-top: 32px;
-  margin-bottom: 32px; */
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   font-weight: 500;
-  line-height: 1.14;
+  font-size: 18px;
   letter-spacing: 0.02em;
+  line-height: 1.67;
   color: #212121;
 }
 
-.site-nav .item + .item {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .site-nav > .list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav .item + .item {
+    margin-top: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav .item + .item {
+    margin-left: 50px;
+  }
 }
 
 .site-nav .link {
@@ -484,6 +514,13 @@ a {
   color: #2196f3;
 }
 
+@media screen and (max-width: 767px) {
+  .site-nav .link.current.studio::after {
+    -webkit-transform: translateX(30%);
+            transform: translateX(30%);
+  }
+}
+
 .site-nav .link.current::after {
   content: '';
   display: block;
@@ -493,6 +530,79 @@ a {
   height: 4px;
   background: #2196f3;
   border-radius: 2px;
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav .link.current::after {
+    margin-top: 8px;
+  }
+}
+
+.menu-button {
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-button:hover, .menu-button:focus-within {
+  fill: #2196f3;
+}
+
+.menu-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 81px;
+  width: 100%;
+  z-index: 1;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    position: absolute;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    margin-left: 0;
+    top: 100%;
+    left: 0;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background: #ffffff;
+    border-top: 1px solid #ececec;
+  }
+  .menu-container.is-open {
+    display: none;
+  }
 }
 
 /* Герой */
