--- a/sass/components/common/_address-block.scss
+++ b/sass/components/common/_address-block.scss
@@ -1,13 +1,15 @@
 /* Адресс */
 .address-blok-header {
-  margin-left: auto;
-
   @media screen and (max-width: 767px) {
-    position: absolute;
+    margin-top: 60px;
+  }
+  @media screen and (min-width: $width-tablet) {
+    margin-left: auto;
   }
 
   & .item {
     display: flex;
+    align-items: center;
 
     &:hover .icon,
     &:focus-within .icon {
@@ -45,18 +47,30 @@
 .site-header .address-list {
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 767px) {
+    align-items: center;
+  }
   @media screen and (min-width: $width-desktop) {
     flex-direction: row;
   }
-}
-.address-list .item + .item {
-  @media screen and (min-width: $width-desktop) {
-    margin-left: 30px;
+  & .item + .item {
+    margin-top: 16px;
+    @media screen and (min-width: $width-tablet) {
+      margin-top: 10px;
+    }
+    @media screen and (min-width: $width-desktop) {
+      margin-top: 0;
+      margin-left: 30px;
+    }
   }
 }
 .address-list .link {
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.67;
   letter-spacing: 0.02em;
+  @media screen and (max-width: 767px) {
+    font-size: 18px;
+  }
   // Для футера
 }
 .footer .address-blok {
