--- a/sass/components/Studio-page/_modal-hero.scss
+++ b/sass/components/Studio-page/_modal-hero.scss
@@ -18,6 +18,11 @@
 
   background: rgba(0, 0, 0, 0.2);
 
+  @media screen and (max-width: 767px) {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
   /* сама форма модалки */
   & .form-blank {
     padding: 40px;
@@ -119,6 +124,11 @@
   }
   & .text-policy {
     line-height: 1.71;
+    text-align: center;
+    @media screen and (max-width: 1199px) {
+      tab-size: 12px;
+      line-height: 1.67;
+    }
   }
   & .icon-checkbox {
     position: absolute;
