--- a/css/main.css
+++ b/css/main.css
@@ -1080,7 +1080,9 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  overflow-y: scroll;
   position: fixed;
+  z-index: 5;
   top: 0;
   left: 0;
   right: 0;
@@ -1090,13 +1092,6 @@ a {
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: rgba(0, 0, 0, 0.2);
   /* сама форма модалки */
-}
-
-@media screen and (max-width: 767px) {
-  .modal {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
 }
 
 .modal .form-blank {
@@ -1109,10 +1104,19 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   position: absolute;
+  -webkit-transform: translateY(30%);
+          transform: translateY(30%);
   background: #ffffff;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .modal .form-blank {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
 
 .modal .field {
