--- a/sass/components/Studio-page/_modal-hero.scss
+++ b/sass/components/Studio-page/_modal-hero.scss
@@ -6,8 +6,10 @@
   margin-right: auto;
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
 
   position: fixed;
+  z-index: 5;
   top: 0;
   left: 0;
   right: 0;
@@ -18,11 +20,6 @@
 
   background: rgba(0, 0, 0, 0.2);
 
-  @media screen and (max-width: 767px) {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-
   /* сама форма модалки */
   & .form-blank {
     padding: 40px;
@@ -30,10 +27,18 @@
     flex-direction: column;
 
     position: absolute;
+    transform: translateY(30%);
 
     background: #ffffff;
     box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
+    @media screen and (max-width: 767px) {
+      margin-left: 15px;
+      margin-right: 15px;
+    }
+    // @media screen and (min-width: $width-tablet) {
+    //   transform: translateY(66%);
+    // }
   }
   & .field {
     padding-top: 12px;
