--- a/sass/components/Studio-page/_hero.scss
+++ b/sass/components/Studio-page/_hero.scss
@@ -4,10 +4,41 @@
   background-color: rgba(47, 48, 58, 0.8);
   &.overlay {
     max-width: 1600px;
-    height: 600px;
+    height: auto;
     margin-right: auto;
     margin-left: auto;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('../images/Header-img.jpg');
+    @media screen and (max-width: 767px) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+        url('../images/Header\ img-mobile.jpg');
+      background-size: cover;
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+          url('../images/Header\ img-mobile@2x.jpg');
+      }
+    }
+    @media screen and (min-width: $width-tablet) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+        url('../images/Header\ img-tablet.jpg');
+      background-size: cover;
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+          url('../images/Header\ img-tablet@2x.jpg');
+      }
+    }
+    @media screen and (min-width: $width-desktop) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url('../images/Header-img.jpg');
+      background-size: cover;
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
+          url('../images/Header\ img@2x.jpg');
+      }
+    }
   }
   & .container {
     flex-direction: column;
@@ -20,10 +51,15 @@
     text-align: center;
     margin-bottom: 30px;
 
+    font-size: 26px;
+    line-height: 1.62;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
     letter-spacing: 0.06em;
     color: $text-white;
+
+    @media screen and (min-width: $width-desktop) {
+      font-size: 44px;
+      line-height: 1.36;
+    }
   }
 }
