--- a/sass/components/Studio-page/_team.scss
+++ b/sass/components/Studio-page/_team.scss
@@ -58,6 +58,9 @@
       flex-basis: calc((100% - 30px) / 2);
     }
   }
+  // & .portret {
+  //   object-fit: contain;
+  // }
   & .title.name {
     margin-top: 30px;
   }
