--- a/css/main.css
+++ b/css/main.css
@@ -1122,15 +1122,12 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  overflow-y: scroll;
   position: fixed;
   z-index: 5;
   top: 0;
@@ -1138,6 +1135,7 @@ a {
   right: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   -webkit-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: rgba(0, 0, 0, 0.2);
