--- a/sass/components/Portfolio-page/_filters.scss
+++ b/sass/components/Portfolio-page/_filters.scss
@@ -13,9 +13,22 @@
   & .filter {
     display: flex;
     flex-direction: row;
+    @media screen and (max-width: 767px) {
+      flex-wrap: wrap;
+    }
   }
   & .item + .item {
     margin-left: 8px;
+    &:nth-child(3n + 4) {
+      @media screen and (max-width: 767px) {
+        margin-left: 0;
+      }
+    }
+    &:nth-child(n + 4) {
+      @media screen and (max-width: 767px) {
+        margin-top: 15px;
+      }
+    }
   }
   & .radio {
     padding: 6px 22px;
